# PF-fracture-fatigue

./: .gitignore  README.md  README_V10_0_2_PROGRESSION.md  README_v10_1.tmp  V10_0_1_DIAGNOSTIC_TRIGGER.md  V10_2_0_FATIGUE_REINTEGRATION_NOTES.md  V10_2_14_PRODUCTION_GEOMETRY_REPAIR.md  V10_2_1_FIXED_DELTAK_NOTES.md  V10_2_2_PHYSICAL_SHIELDING_NOTES.md  V10_2_3_SHARED_CORE_UNCAPPED_SHIELDING_NOTES.md  V10_2_3_SHARED_REDUCED_STATE_NOTES.md  V10_2_5_INSTALL_TEST_AND_SIGNED_DISLOCATION_GUIDE.md  V10_2_5_SIGNED_BURGERS_SHARED_PHYSICS_NOTES.md  V10_2_6_STATE_RESOLVED_SIGNED_KERNEL_NOTES.md  V10_2_7_TWO_CLASS_PARAMETERIZATION_PLAN.md  V10_2_8_STAGED_PARAMETERIZATION_PLAN.md  V10_2_9_QUALITY_DIVERSITY_PROMOTION.md  VALIDATION.md  pyproject.toml
.bootstrap/: custom.part_aa  custom.part_ab  custom.part_ac  materialize_v10.py  part-00  part-01  part-01a  part-02  part-03  part-04  part-05  part-06  part-07  pr_trigger.txt  source.part_aa  v10overlay.bin_08  v10overlay.bin_09  v10overlay.bin_10  v10overlay.bin_11  v10overlay.bin_12  v10overlay.bin_13  v10overlay.part_00  v10overlay.part_01  v10overlay.part_02  v10overlay.part_03  v10overlay.part_04  v10overlay.part_05  v10overlay.part_06  v10overlay.part_07
arrhenius_fracture/: __init__.py  __main__.py  analytical_screen_v1028.py  anisotropic_continuum_source_v10216.py  anisotropic_emission_v10174.py  campaign_calibrated_tip.py  capture_audit_repair_v10213.py  checked_spatial_station_projection_v10212.py  coalescence.py  config.py  continuum_source_tip.py  crack_backend.py  crystal.py  developed_state_diagnostic_tip.py  emission_derived_plasticity.py  fatigue_postprocess.py  fatigue_reintegration_v1020.py  fatigue_sharp_front.py  fatigue_v1.py  fem.py  fixed_deltaK_v1021.py  forward_interaction_zone_tip.py  fractional_moving_frame.py  frozen_geometry_load_invariance_v10213.py  geometry_source_feedback_tip.py  (+97 more)
(+289 files in other folders)
